--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>arclight</title>
+      <meta name="viewport" content="width=device-width,initial-scale=1.0">
+      <title>ArcLight</title>
+      <meta name="description" content="A Arweave Storage App">
+      <link rel="icon" type="image/png" href="/static/favicon.png">
+      <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <div id="app"></div>
