:bento: Replace assets with deployed static files
Signed-off-by: Ayaka Neko <neko@ayaka.moe>

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta name="viewport" content="width=device-width,initial-scale=1.0">
       <title>ArcLight</title>
       <meta name="description" content="A Arweave Storage App">
-      <link rel="icon" type="image/png" href="/static/favicon.png">
+      <link rel="icon" type="image/png" href="https://arweave.net/QBZ-GBVAsum9Eyjzwq04cKYky2pjZUPGtyrwwhwFpfg">
       <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
   </head>
   <body>
