--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
       <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
       <link href="https://cdn.jsdelivr.net/npm/@mdi/font@5.x/css/materialdesignicons.min.css" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Material+Icons" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
