:pencil: Updated the description
Signed-off-by: Ayaka Neko <neko@ayaka.moe>

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
       <meta name="viewport" content="width=device-width,initial-scale=1.0">
       <title>ArcLight</title>
-      <meta name="description" content="A Arweave Storage App">
+      <meta name="description" content="An Arweave Music and Podcast Distribution App for users to listen and pay to download the source music">
       <link rel="icon" type="image/png" href="./static/favicon.png">
       <link href="./static/css/main.css" rel="stylesheet">
       <link href="./static/css/materialdesignicons.min.css" rel="stylesheet">
