:lipstick: Added Roboto and lato font face back
Signed-off-by: Ayaka Neko <neko@ayaka.moe>

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="./favicon.png">
-    <title>ArcLight</title><meta name="description" content="An Arweave Music and Podcast Distribution App for users to listen and pay to download the source music">
+    <title>ArcLight</title>
+    <meta name="description" content="An Arweave Music and Podcast Distribution App for users to listen and pay to download the source music">
+    <link href="./css/main.css" rel="stylesheet">
   </head>
   <body>
     <noscript>
