:sparkles: Dynamicly load genres json
Signed-off-by: Ayaka Neko <neko@ayaka.moe>

--- a/public/index.html
+++ b/public/index.html
@@ -14,5 +14,6 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="https://unpkg.com/musicgenres-json@latest/dist/index.js"></script>
   </body>
 </html>
