--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="./favicon.png">
     <title>ArcLight</title>
     <meta name="description" content="An Arweave Music and Podcast Distribution App for users to listen and pay to download the source music">
-    <link href="./css/main.css" rel="stylesheet">
+    <link href="./css/index.css" rel="stylesheet">
   </head>
   <body>
     <noscript>
